Fix/radio not showing iphone (#47)
* move footer outside background video

* add flex to root

* modify background video styles

* add footer styles

* add iframe styles

* remove styles from html element

* modify liveradio scss file name

* add position relative to root

* add mediaqueries to footer

* add padding 0 margin 0 to all

* change home styles and name

* add vite config aliases for src folders

--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -1,13 +1,18 @@
 @import 'colors';
 @import 'fonts';
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
-  --app-height: 100%;
+  --app-height: 100svh;
 }
 
 html,
 body {
-  height: 100vh;
+  height: 100svh;
   height: var(--app-height);
   margin: 0;
   overflow: hidden;
@@ -16,7 +21,10 @@ body {
 }
 
 #root {
+  display: flex;
+  flex-direction: column;
   height: var(--app-height);
+  position: relative;
 }
 
 main {
